crates/inertia-macros/tests/ui/fail/inertia_type_custom_serializer.stderr
error: error[INERTIA-TYPEGEN-010]: `total` uses custom Serde serialization but does not declare its TypeScript wire representation; add #[ts(type = "...")] or #[ts(as = "...")]
 --> tests/ui/fail/inertia_type_custom_serializer.rs:6:5
  |
6 |     #[serde(serialize_with = "serialize_total")]
  |     ^
